--- a/src/components/Container/style.css
+++ b/src/components/Container/style.css
@@ -5,4 +5,9 @@
     margin-left: 100px;
     width: 85%;
     height: 100%;
+    background: url('../images/19742.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
