--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,15 @@
+body {
+    background: url('./components/images/whitebackground.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .containerr {
     color: teal;
     margin-top: 50px;
     margin-left: 100px;
     width: 85%;
     height: 100%;
-}
-
-body {
-    background: url('./components/images/19742.jpg') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
