--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -7,9 +7,8 @@
     color: black;
     text-align: center;
     font-size: 35px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    background-color: white;
+    margin: 0;
+    padding: 0;
   }
 
   .git {
