--- a/src/pages/ProjectsPage/style.css
+++ b/src/pages/ProjectsPage/style.css
@@ -25,9 +25,19 @@
     font-size: 50px;
     display: inline;
   }
+
+  .text {
+    background-color: #cdd3d5;
+  }
+
+  .header {
+    width: 100%;
+    padding: 5px;
+  }
   
   .center {
     text-align: center;
+    color: #cf5c36;
   }
   
   .container {
@@ -37,6 +47,19 @@
     width: auto;
     width: 100%;
     height: auto;
+  }
+
+  .buttonProj {
+    text-align: center;
+    color: white;
+    background-color: rgb(37, 37, 37);
+    padding: 10px;
+    border-radius: 30px;
+    height: 50%;
+  }
+  
+  .mid {
+    height: 50%;
   }
   
   .space {
